<?xml version="1.0"?>
<package>
  <name>mpac_conversions</name>
  <version>0.4.0</version>
  <description>The mpac_conversions package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>mpac_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>mpac_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>
    <cpp cflags="-I${prefix}/include" /> 

  </export>
</package>
