<?xml version="1.0"?>
<package>
  <name>mpac_launch</name>
  <version>0.4.0</version>
  <description>The mpac_launch package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
