<?xml version="1.0"?>
<package>
  <name>mpac_manager</name>
  <version>0.4.0</version>
  <description>The mpac_manager package</description>

  <maintainer email="shaochang@sineva.com">Shao Chang</maintainer>
  <license>TODO</license>

  <build_depend>cmake_modules</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mpac_msgs</build_depend>
  <build_depend>mpac_generic</build_depend>
  <build_depend>mpac_rviz</build_depend>
  <build_depend>mpac_conversions</build_depend>
  <build_depend>mpac_geometry</build_depend>
  <build_depend>mpac_trajectory_processor</build_depend>
  <build_depend>mpac_constraint_extract</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>sineva_nav</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>mpac_msgs</run_depend>
  <run_depend>mpac_generic</run_depend>
  <run_depend>mpac_rviz</run_depend>
  <run_depend>mpac_conversions</run_depend>
  <run_depend>mpac_geometry</run_depend>
  <run_depend>mpac_trajectory_processor</run_depend>
  <run_depend>mpac_constraint_extract</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>sineva_nav</run_depend>

  <export>

  </export>
</package>
