<?xml version="1.0"?>
<package>
  <name>mpac_msgs</name>
  <version>0.4.0</version>
  <description>The mpac_msgs package</description>

  <maintainer email="shaochang@sineva.com.cn">Shao Chang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
   <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend> 

  <export>
    <cpp cflags="-I${prefix}/include" />
    
  </export>
</package>
