<?xml version="1.0"?>
<package>
  <name>mpac_rviz</name>
  <version>0.4.0</version>
  <description>The mpac_rviz package</description>

  <maintainer email="shaochang@sineva.com.cn">Shao Chang</maintainer>
  <license>TODO</license>

  <build_depend>cmake_modules</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mpac_conversions</build_depend>
  <build_depend>mpac_generic</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>mpac_conversions</run_depend>
  <run_depend>mpac_generic</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  
  <export>
    <cpp cflags="-I${prefix}/include" />

  </export>
</package>
